# Quantum-AI-Research-Series

./: .env.example  .gitignore  AUTHORSHIP_COMPLIANCE_REPORT.md  AUTHORSHIP_POLICY.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECTS_SHOWCASE.md  PROJECT_KNOWLEDGE_BASE.md  README.md  package.json  pyproject.toml  report.md  requirements-ci.txt  requirements.txt  setup.py
02-Quantum-Chemistry-VQE/: .gitignore  README.md  check_uccsd.py  environment.yml  project_02_vqe_h2.ipynb  pyproject.toml  requirements.txt  setup.py
02-Quantum-Chemistry-VQE/config/: simulation_config.yaml
02-Quantum-Chemistry-VQE/notebooks/: H2_Dissociation_Curve.ipynb
02-Quantum-Chemistry-VQE/scripts/: run_ablation_study.py  run_experiment.py  run_hardware_experiment.py  run_multi_seed.py  run_verification.py  run_warm_start_study.py
02-Quantum-Chemistry-VQE/src/: __init__.py  adapt_vqe_engine.py  advanced_plotting.py  ansatz_factory.py  backend_manager.py  classical_solver.py  config_schema.py  data_processor.py  experiment_tracker.py  extensions.py  hamiltonian_optimizer.py  interfaces.py  molecule_driver.py  noise_model_builder.py  optimizer_callbacks.py  pes_generator.py  plotting.py  problem_builder.py  runtime_executor.py  statistical_analysis.py  vqe_engine.py
02-Quantum-Chemistry-VQE/tests/: test_unit.py
04-Optimization-QAOA-MaxCut/: .gitignore  PLAN.md  README.md  generate_artifacts.py  integration_test.py  project_04_qaoa_maxcut.ipynb  pyproject.toml  pytest.ini  requirements.txt
04-Optimization-QAOA-MaxCut/config/: experiment_config.yaml
04-Optimization-QAOA-MaxCut/data/: robot_network.adjlist
04-Optimization-QAOA-MaxCut/docs/: mathematical_formulation.md
04-Optimization-QAOA-MaxCut/notebooks/: 01_problem_formulation.ipynb  02_qaoa_execution.ipynb  03_results_analysis.ipynb
04-Optimization-QAOA-MaxCut/results/: .gitkeep  benchmark_robustness_runs.csv  benchmark_robustness_summary.csv  hardware_feasibility.csv  metrics.csv  publication_positioning.json  publication_positioning.md  results_verdict.json  results_verdict.md  run_manifest.json  study_budget_summary.csv  study_candidate_search.csv  study_instance_metrics.csv  study_manifest.json  study_method_summary.csv  study_pairwise_summary.csv  study_significance.csv
04-Optimization-QAOA-MaxCut/src/: __init__.py  artifact_manager.py  artifact_pipeline.py  artifact_schema.py  classical_solver.py  evaluation_metrics.py  experimental_study.py  graph_generator.py  hamiltonian_builder.py  hardware_analysis.py  provenance.py  qaoa_circuit.py  qaoa_optimizer.py  results_review.py  rqaoa_engine.py  runtime_executor.py  visualization.py
04-Optimization-QAOA-MaxCut/tests/: conftest.py  requirements-test.txt  test_artifact_pipeline.py  test_classical_solver.py  test_evaluation_metrics.py  test_graph_generator.py  test_hamiltonian.py  test_hardware_analysis.py  test_qaoa_circuit.py  test_qaoa_optimizer.py  test_results_review.py  test_rqaoa.py  test_runtime_executor.py
04-Optimization-QAOA-MaxCut/utils/: __init__.py  circuit_transpiler.py  qiskit_helpers.py
05-Reinforcement-Learning-Noise-Mitigation/: .gitignore  README.md  project_05_quantum_rl_noise.ipynb  pyproject.toml  requirements.txt
(+1042 files in other folders)
