[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-ai-research-series"
version = "2026.3.16"
description = "Repository metadata for the Quantum AI Research Series research portfolio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DEVADATH H K" }]
