[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qaoa-maxcut-research"
version = "1.7.0"
description = "Benchmark-oriented QAOA/RQAOA research toolkit for Max-Cut."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "DEVADATH H K" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pandas>=2.0",
  "networkx>=3.2",
  "qiskit>=1.1",
  "qiskit-aer>=0.14",
  "qiskit-ibm-runtime>=0.23",
  "qiskit-optimization>=0.6",
  "qiskit-machine-learning>=0.7",
  "qiskit-nature>=0.7",
  "qiskit-algorithms>=0.3.0",
  "scikit-learn>=1.4",
  "PyYAML>=6.0",
  "tqdm>=4.65",
  "cvxpy>=1.4.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "jupyter>=1.0",
  "notebook>=7.0"
]

[tool.setuptools]
packages = []
